--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,4 +1,11 @@
-  
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.primary-button {
+  @apply w-full px-3 py-3 text-white bg-primary rounded-md hover:shadow-md focus:bg-indigo-600 focus:outline-none;
+}
+
+.social-button {
+  @apply w-full px-3 py-2 text-black bg-white shadow rounded-full flex justify-center items-center border border-primary hover:shadow-md focus:bg-indigo-600 focus:outline-none;
+}
