--- a/src/assets/scss/button.scss
+++ b/src/assets/scss/button.scss
@@ -9,5 +9,5 @@
 }
 
 .social-button {
-  @apply w-full px-3 py-2 text-black bg-white shadow rounded-full flex justify-center items-center border border-primary;
+  @apply w-full px-3 py-2 text-primary bg-white font-semibold shadow rounded-full flex justify-center items-center border border-primary;
 }
