--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap');
 
 .primary-button {
   @apply w-full px-3 py-3 text-white bg-primary rounded-md hover:shadow-md focus:bg-indigo-600 focus:outline-none;
